# autoignore

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  SECURITY.md  meson.build
completion/: _autoignore  autoignore.bash  autoignore.fish
include/: Common.hpp  Detector.hpp  Interactive.hpp  TemplateStore.hpp
src/: Detector.cpp  Interactive.cpp  TemplateStore.cpp  main.cpp  template_mix.cpp
template/: 1c.gitignore  ada.gitignore  android.gitignore  angular.gitignore  ansible.gitignore  archives.gitignore  archpkg.gitignore  asm.gitignore  astro.gitignore  aurpkg.gitignore  autotools.gitignore  avalonia.gitignore  b.gitignore  bazel.gitignore  blazor.gitignore  bun.gitignore  c.gitignore  clojure.gitignore  cmake.gitignore  cpp.gitignore  crystal.gitignore  cs.gitignore  d.gitignore  dart.gitignore  deb.gitignore  deno.gitignore  django.gitignore  docker.gitignore  doxygen.gitignore  elexir.gitignore  emacs.gitignore  erlang.gitignore  eslint.gitignore  flask.gitignore  flutter.gitignore  freebsdpkg.gitignore  fs.gitignore  gettext.gitignore  go.gitignore  godot.gitignore  (+61 more)
